@@ -1,3 +1,9 @@
+2010-05-25  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
+
+ * src/speller.c:
+   Fix broken checks when the selected text is only on one line.
+
+
 2010-01-01  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
 
  * src/*.c, src/*.h:
